# APC524-Election2024

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Final_project_predictive_model.ipynb  Procfile  README.md  doc  index.html  noxfile.py  prediction.py  pyproject.toml  requesting_data.py  requirements.txt  test.py  useful_websites.txt
.github/workflows/: ci.yaml
data/: president_polls_cleaned.csv
docs/: conf.py
src/: index.html  requesting_data.py  scraper.py
src/apc524-election2024/: .__init__.py.swp  .data_cleaning.py.swp  .date_data.py.swp  .election_dashboard.py.swp  .requesting_data.py.swp  __init__.py  app.py  data_cleaning.py  data_data.py  date_data.py  election_dashboard.py  jinja.py  jinja_template.html  pie_chart.py  requesting_data.py  scraper.py  state_data.py  test.json
src/apc524-election2024/data/: model_prediction.csv
src/apc524_election2024/: date_data.py  pie_chart.py  state_data.py
tests/: test_data_cleaning.py  test_date_data.py  test_example.py  test_pie_chart.py  test_requesting_data.py  test_scraper.py  test_state_data.py
