[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "APC524-Election2024"
version = "0.1.0"
description = "Project to analyze election data, predict results, and serve to audience via a website"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "bs4",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "nox"
]

docs = [
    "sphinx",
    "furo",
    "myst_parser"
]

[tool.ruff.lint]
extend-select = [
  "B",
  "UP",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apc524_election2024"]

[tool.hatch.metadata]
dynamic = ["version"]